[package]
name = "rust-webpack-template"
description = "Walk The Dog - Rust games with assembly"
version = "0.1.0"
categories = ["wasm"]
edition = "2021"

[dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
getrandom = { version = "0.2", features = ["js"] }
web-sys = { version = "0.3", features = [
  "console",
  "Window",
  "Document",
  "HtmlCanvasElement",
  "CanvasRenderingContext2d",
  "Element",
] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
futures = "0.3"
js-sys = "0.3"
wasm-bindgen-futures = "0.4"

[lib]
crate-type = ["cdylib", "rlib"]
