[package]
name = "rust-webpack-template"
description = "Walk The Dog - Rust games with assembly"
version = "0.1.0"
categories = ["wasm"]
edition = "2021"

[dependencies]
once_cell = "1.2"
futures = "0.3"
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
  "console",
  "Window",
  "Document",
  "HtmlCanvasElement",
  "HtmlImageElement",
  "CanvasRenderingContext2d",
  "Element",
  "Event",
] }
console_error_panic_hook = "0.1"

[dev-dependencies]
approx = "0.5"
wasm-bindgen-test = "0.3"
js-sys = "0.3"

[lib]
crate-type = ["cdylib", "rlib"]
